--- a/src/components/Pills.astro
+++ b/src/components/Pills.astro
@@ -6,7 +6,7 @@
 <li>
   <a
     href={link}
-    class="flex gap-x-2 items-center bg-white/10 px-3 py-1 border-2 border-white/5 rounded-3xl hover:bg-white/15 transition"
+    class="text-indigo-100 flex gap-x-2 items-center bg-white/10 px-3 py-1 border-2 border-white/5 rounded-3xl hover:bg-white/15 transition"
   >
     <slot />
   </a>
