--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,5 +1,9 @@
+---
+const { text } = Astro.props;
+---
+
 <h1
-  class="text-xl font-semibold flex items-center  mb-10"
+  class="text-4xl font-semibold flex justify-center items-center text-indigo-100 mb-10"
 >
-  <slot />
+  {text}
 </h1>
