--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -3,7 +3,6 @@ import Layout from "../../layouts/Layout.astro";
 import Section from "../../components/Section.astro";
 import Technologies from "../../components/Technologies.astro";
 import Projects from "../../components/Projects.astro";
-import Education from "../../components/Education.astro";
 import Experience from "../../components/Experience.astro";
 import Title from "../../components/Title.astro";
 import ColoredButton from "../../components/Buttons/ColoredButton.astro";
@@ -12,17 +11,14 @@ import Pills from "../../components/Pills.astro";
 // Icons
 import GitHub from "../../icons/GitHub.astro";
 import LinkedIn from "../../icons/LinkedIn.astro";
-import Code from "../../icons/Code.astro";
 import Link from "../../icons/Link.astro";
-import Book from "../../icons/Book.astro";
 import Gmail from "../../icons/Gmail.astro";
-import Stack from "../../icons/Stack.astro";
-import Briefcase from "../../icons/Briefcase.astro";
 
 // i18n
 import es from "../../i18n/es";
 import en from "../../i18n/en";
 import { Language } from "../../types/language-type";
+import Certificates from "../../components/Certificates.astro";
 
 export function getStaticPaths() {
   return [{ params: { lang: "es" } }, { params: { lang: "en" } }];
@@ -43,12 +39,12 @@ const t = translations[lang];
         <ul
           class="flex flex-wrap flex-row gap-2 items-center justify-center text-sm mb-8"
         >
-          <Pills link="">
+          <Pills link="#">
             <Gmail class="size-4" />
             fergzm05@gmail.com
           </Pills>
           <Pills
-            link="https://www.linkedin.com/in/fernanda-gonz%C3%A1lez-mu%C3%B1oz-37084b199/"
+            link="https://www.linkedin.com/in/fernanda-gonzalez-mu%C3%B1oz-37084b199/"
           >
             <LinkedIn class="size-4" />
             LinkedIn
@@ -60,13 +56,14 @@ const t = translations[lang];
         </ul>
         <h1
           set:html={t.home.title}
-          class="lg:text-6xl text-5xl font-medium flex flex-col mb-8 bg-gradient-to-b from-white to-lavanda-light text-transparent bg-clip-text"
+          class="lg:text-6xl text-5xl font-semibold flex flex-col mb-8 bg-gradient-to-b from-indigo-100 to-lavanda-light text-transparent bg-clip-text"
         />
-        <p class="text-white/40 font-regular mb-8 lg:text-xl text-md">
+        <span class="bg-lavanda w-12 h-2 -mt-5 mb-5 rounded-lg"></span>
+        <p class="text-indigo-200/40 font-regular mb-8 lg:text-xl text-md">
           {t.home.description}
         </p>
 
-        <ColoredButton link="./MyCV.pdf">
+        <ColoredButton link={t.home["resume-link"]}>
           <span>{t.home['resume-button']}</span>
           <Link class="size-5" />
         </ColoredButton>
@@ -75,38 +72,30 @@ const t = translations[lang];
 
     <!-- Tech Stack -->
     <Section id="tech" class="pt-36">
-      <Title>
-        <span class="text-3xl">{t.sections.tech}</span>
-        <Stack class="size-7 ms-3" />
-      </Title>
-      <Technologies />
+      <Title text={t.sections.tech}/>
+      <span class="bg-lavanda w-12 h-2 -mt-7 mb-10 rounded-lg"></span>
+      <Technologies t={t}/>
     </Section>
 
-    <!-- Education -->
-    <Section id="education" class="pt-36">
-      <Title>
-        <span class="text-3xl">{t.sections.education}</span>
-        <Book class="size-7 ms-3" />
-      </Title>
-      <Education t={t}/>
+    <!-- Certifications -->
+    <Section id="certifications" class="pt-36">
+      <Title text={t.sections.certifications}/>
+      <span class="bg-lavanda w-12 h-2 -mt-7 mb-10 rounded-lg"></span>
+      <Certificates t={t}>
     </Section>
 
     <!-- Experience -->
     <Section id="experience" class="pt-36">
-      <Title>
-        <span class="text-3xl">{t.sections.experience}</span>
-        <Briefcase class="size-7 ms-3" />
-      </Title>
+      <Title text={t.sections.experience}/>
+      <span class="bg-lavanda w-12 h-2 -mt-7 mb-10 rounded-lg"></span>
       <Experience t={t}/>
     </Section>
 
     <!-- Projects -->
     <Section id="projects" class="pt-36">
-      <Title>
-        <span class="text-3xl">{t.sections.projects}</span>
-        <Code class="size-7 ms-3" />
-      </Title>
-      <Projects lang={lang} t={t}/>
+      <Title text={t.sections.projects}/>
+      <span class="bg-lavanda w-12 h-2 -mt-7 mb-10 rounded-lg"></span>
+      <Projects t={t}/>
     </Section>
   </main>
 </Layout>
