--- a/src/components/Buttons/ColoredButton.astro
+++ b/src/components/Buttons/ColoredButton.astro
@@ -1,10 +1,11 @@
 ---
-const { class: className, link } = Astro.props;
+const { class: className, link, title } = Astro.props;
 ---
 
 <a
   href={link}
-  class={` bg-lavanda py-3 px-5 font-medium rounded-full flex items-center justify-center gap-x-1 hover:bg-lavanda-light transition cursor-pointer ${className}`}
+  title={title}
+  class={` bg-lavanda py-3 px-5 font-medium rounded-full flex items-center justify-center gap-x-1 hover:bg-lavanda-light transition cursor-pointer shadow-2xl shadow-lavanda/50 hover:shadow-lavanda/80 transition ease-in-out duration-300 ${className}`}
 >
   <slot />
 </a>
