--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,72 +1,79 @@
 ---
 // Import icons
 import Calendar from "../icons/Calendar.astro";
-import Pills from "./Pills.astro"
+import Pills from "./Pills.astro";
 
 const { t } = Astro.props;
 
 const EXPERIENCE = [
   {
-    position: t.experience[0].position,
+    position: t.experience.items[0].position,
     company: "HDI SEGUROS",
-    time: t.experience[0].time,
-    location: t.experience[0].location,
-    description: t.experience[0].description  as string[],
+    time: t.experience.items[0].time,
+    location: t.experience.items[0].location,
+    description: t.experience.items[0].description as string[],
     technologies: [
-        "XAML",
-        "SQL Server",
-        "Git",
-        "C#",
-        ".NET MAUI"
-    ]  
+      "React",
+      "Angular",
+      "Sybase",
+      "Git",
+      "C#",
+      ".NET Framework",
+      "ASP.NET Core",
+      "Azure DevOps",
+      "Docker",
+    ],
   },
   {
-    position: t.experience[1].position,
+    position: t.experience.items[1].position,
     company: "Axolotl Solutions",
-    time: t.experience[1].time,
-    location: t.experience[1].location,
-    description: t.experience[1].description as string[],
-    technologies: [
-        "React",
-        "Angular",
-        "Sybase",
-        "Git",
-        "C#",
-        ".NET",
-        "Azure DevOps"
-    ]  
+    time: t.experience.items[1].time,
+    location: t.experience.items[1].location,
+    description: t.experience.items[1].description as string[],
+    technologies: ["XAML", "SQL Server", "Git", "C#", ".NET MAUI"],
   },
-
 ];
 ---
 
-<div class="flex flex-col gap-y-10">
+<div class="flex flex-col gap-y-5 w-full">
   {
-    EXPERIENCE.map((experience) => (
-      <section class="flex flex-col gap-y-3 ">
-        <h1 class="font-semibold flex flex-col text-xl">
-          <span>{experience.position}</span>
-          <span class="text-lavanda">
-            {experience.company}
+    EXPERIENCE.map(
+      ({
+        position,
+        company,
+        time,
+        location,
+        description,
+        technologies,
+      }) => (
+        <section class="flex flex-col gap-y-3 bg-white/10 rounded-md p-5">
+          <h1 class="text-indigo-100 font-semibold flex flex-col text-xl">
+            <span>{position}</span>
+            <span class="text-lavanda">{company}</span>
+          </h1>
+          <span class="flex items-center gap-x-2 text-white/30 text-sm">
+            <Calendar class="size-4" />
+            {time} , {location}
           </span>
-        </h1>
-        <div class="flex items-center gap-x-2 text-white/30 font-medium">
-          <Calendar class="size-4" />
-          {experience.time} , {experience.location}
-        </div>
-        <div class="text-white/60 flex flex-col gap-y-1">
-          {experience.description.map( (item) => (
-            <li>{item}</li>
-          ) )}
-        </div>
-        <ul class="flex flex-wrap gap-2">
-            {
-                experience.technologies.map( item => (
-                    <Pills>{item}</Pills>
-                ))
-            }
-        </ul>
-      </section>
-    ))
+          <div class="list-disc text-white/60 flex flex-col gap-y-2">
+            <details class="text-sm">
+              <summary class="text-indigo-100 bg-lavanda rounded-full px-3 py-1 w-fit cursor-pointer mb-5">
+                {t.experience.activities}
+              </summary>
+              <ul class="list-disc list-inside text-indigo-100/40">
+                {description.map((item) => (
+                  <li>{item}</li>
+                ))}
+              </ul>
+            </details>
+          </div>
+          <ul class="flex flex-wrap gap-2 mt-5 text-sm">
+            {technologies.map((item) => (
+              <Pills>{item}</Pills>
+            ))}
+          </ul>
+        </section>
+      )
+    )
   }
 </div>
