--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,6 +2,6 @@
 const { class: className, id} = Astro.props
 ---
 
-<section id={id} class={`flex flex-col mt-52 mb-28 gap-x-5 lg:w-[650px] w-full mx-auto ${className}`}>
+<section id={id} class={`flex flex-col items-center mt-52 mb-28 gap-x-5 lg:w-[650px] w-full mx-auto ${className}`}>
     <slot/>
 </section>
