--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -12,72 +12,183 @@ import CSharp from "../icons/tech/CSharp.astro";
 import Azure from "../icons/tech/Azure.astro";
 import MySQL from "../icons/tech/MySQL.astro";
 import SQL from "../icons/tech/SQL.astro";
+import Docker from "../icons/tech/Docker.astro";
+import Figma from "../icons/tech/Figma.astro";
+import Postman from "../icons/tech/Postman.astro";
+import Linux from "../icons/tech/Linux.astro";
+import Windows from "../icons/tech/Windows.astro";
+import Postgres from "../icons/tech/Postgres.astro";
 
-const TECH = [
+const { t } = Astro.props;
+const stacks = [
   {
-    name: "React",
-    icon: React,
+    category: t.technologies.languages,
+    items: [
+      {
+        name: "C#",
+        icon: CSharp,
+        color: "bg-purple-500/60",
+        hoverColor: "hover:border-purple-500/60"
+      },
+      {
+        name: "TypeScript",
+        icon: TypeScript,
+        color: "bg-sky-600/60",
+        hoverColor: "hover:border-sky-600/60"
+      },
+      {
+        name: "JavaScript",
+        icon: JavaScript,
+        color: "bg-yellow-500/60",
+        hoverColor: "hover:border-yellow-500/60"
+      },
+      {
+        name: "HTML5",
+        icon: HTML,
+        color: "bg-yellow-700/60",
+        hoverColor: "hover:border-yellow-700/60"
+      },
+      {
+        name: "CSS3",
+        icon: CSS,
+        color: "bg-blue-600/60",
+        hoverColor: "hover:border-blue-600/60"
+      },
+    ],
+  },
+
+  {
+    category: t.technologies.os,
+    items: [
+      {
+        name: "Linux",
+        icon: Linux,
+        color: "bg-yellow-300/40",
+        hoverColor: "hover:border-yellow-300/40",
+      },
+      {
+        name: "Windows",
+        icon: Windows,
+        color: "bg-sky-500/60",
+        hoverColor: "hover:border-sky-500/60",
+      },
+    ],
   },
   {
-    name: "Angular",
-    icon: Angular,
+    category: t.technologies.devOps,
+    items: [
+      {
+        name: "Docker",
+        icon: Docker,
+        color: "bg-blue-800/60",
+        hoverColor: "hover:border-blue-800/60",
+      },
+      {
+        name: "Azure DevOps",
+        icon: Azure,
+        color: "bg-blue-800/60",
+        hoverColor: "hover:border-blue-800/60",
+      },
+    ],
   },
   {
-    name: "TypeScript",
-    icon: TypeScript,
+    category: t.technologies.dataBases,
+    items: [
+      {
+        name: "MySQL",
+        icon: MySQL,
+        color: "bg-sky-400/20",
+        hoverColor: "hover:border-sky-400/20",
+      },
+      {
+        name: "SQL Server",
+        icon: SQL,
+        color: "",
+        hoverColor: "",
+      },
+      {
+        name: "Postgres",
+        icon: Postgres,
+        color: "bg-blue-600/60",
+        hoverColor: "hover:border-blue-600/60",
+      },
+    ],
   },
   {
-    name: "CSS3",
-    icon: CSS,
+    category: t.technologies.framewLib,
+    items: [
+      {
+        name: "React",
+        icon: React,
+        color: "bg-sky-600/40",
+        hoverColor: "hover:border-sky-600/40",
+      },
+      {
+        name: "Angular",
+        icon: Angular,
+        color: "bg-red-600/40",
+        hoverColor: "hover:border-red-600/40",
+      },
+      {
+        name: ".NET",
+        icon: NET,
+        color: "bg-indigo-600/60",
+        hoverColor: "hover:border-indigo-600/60",
+      },
+    ],
   },
+
   {
-    name: "HTML5",
-    icon: HTML,
-  },
-  {
-    name: "JavaScript",
-    icon: JavaScript,
-  },
-  {
-    name: "C#",
-    icon: CSharp,
-  },
-  {
-    name: ".NET",
-    icon: NET,
-  },
-  {
-    name: "Git",
-    icon: Git,
-  },
-  
-  {
-    name: "Azure DevOps",
-    icon: Azure,
-  },
-  {
-    name: "MySQL",
-    icon: MySQL,
-  },
-  {
-    name: "Microsoft SQL Server",
-    icon: SQL,
+    category: t.technologies.tools,
+    items: [
+      {
+        name: "Git",
+        icon: Git,
+        color: "bg-yellow-800/60",
+        hoverColor: "hover:border-yellow-800/60",
+      },
+      {
+        name: "Postman",
+        icon: Postman,
+        color: "bg-yellow-800/60",
+        hoverColor: "hover:border-yellow-800/60",
+      },
+      {
+        name: "Figma",
+        icon: Figma,
+        color: "bg-purple-500/60",
+        hoverColor: "hover:border-purple-500/60",
+      },
+    ],
   },
 ];
+
+
 ---
 
-<div class="border-2 border-white/10 flex p-3">
-  <div class="flex flex-wrap justify-center gap-3 rounded">
-    {
-      TECH.map((tech) => (
-        <div class="flex relative group  bg-white/10 py-3 lg:w-[15%]  w-[30%] items-center rounded justify-center hover:bg-white/15 transition">
-          <div class="absolute rounded-full w-16 h-16 opacity-0 bg-lavanda blur-lg group-hover:opacity-50 transition duration-700"/>
-          <div class="relative flex flex-col items-center  ">
-            <tech.icon class="lg:size-8 size-10 mb-5" />
-            <p class="text-xs text-center">{tech.name}</p>
-          </div>
+<div class="flex flex-wrap gap-6 w-full justify-center">
+  {
+    stacks.map(({ category, items }) => (
+      <section class="flex flex-col justify-center items-center my-5 w-fit">
+        <h3 class="mb-5 text-xl text-indigo-100/40 font-semibold">
+          {category}
+        </h3>
+        <div class="flex gap-x-2 gap-y-2 md:gap-y-0 bg-indigo-100/5 flex-wrap rounded-sm p-2 justify-center">
+          {items.map(({ name, icon: Icon, color, hoverColor }) => (
+            <div
+              class={`flex relative group bg-white/10 border-2 border-transparent ${hoverColor} py-3 md:size-28 size-24 rounded items-center  justify-center hover:bg-white/15 transition`}
+            >
+              <div
+                class={`absolute rounded-full w-16 h-16 opacity-0 blur-lg group-hover:opacity-50 transition duration-700 ${color}`}
+              />
+              <div class="relative flex flex-col items-center">
+                <Icon class="md:size-8 size-8 mb-5" />
+                <p class="text-xs text-center">{name}</p>
+              </div>
+            </div>
+          ))}
         </div>
-      ))
-    }
-  </div>
+      </section>
+    ))
+  }
 </div>
