--- a/src/icons/tech/CSS.astro
+++ b/src/icons/tech/CSS.astro
@@ -1,23 +1,1 @@
-<svg
-  {...Astro.props}
-  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520">
-  <defs>
-    <!-- Definimos la máscara para recortar las letras -->
-    <mask id="cutout4">
-      <!-- Fondo visible, todo blanco -->
-      <rect width="100%" height="100%" fill="white"/>
-      <!-- Letras en negro, recortadas -->
-      <path fill="black" d="M226 208H94l5 57h127zm0-114H84l5 56h137zm0 261l-124-33 7 60 117 32z"/>
-      <path fill="black" d="M226 265h69l-7 73-62 17v59l115-32 26-288H226v56h80l-6 58h-74z"/>
-    </mask>
-  </defs>
-
-  <!-- Aplicar la máscara para recortar las letras, y respetar la forma del fondo -->
-  <g mask="url(#cutout4)">
-    <!-- Mantener la forma del fondo del logo, con el color original que desees (en este caso blanco) -->
-    <path fill="white" d="M41 460L0 0h451l-41 460-185 52"></path>
-    <path fill="white" d="M226 472l149-41 35-394H226"></path>
-    <path fill="white" d="M226 208H94l5 57h127zm0-114H84l5 56h137zm0 261l-124-33 7 60 117 32z"></path>
-    <path fill="white" d="M226 265h69l-7 73-62 17v59l115-32 26-288H226v56h80l-6 58h-74z"></path>
-  </g>
-</svg>
+<svg {...Astro.props} viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6 28L4 3H28L26 28L16 31L6 28Z" fill="#1172B8"></path> <path d="M26 5H16V29.5L24 27L26 5Z" fill="#33AADD"></path> <path d="M19.5 17.5H9.5L9 14L17 11.5H9L8.5 8.5H24L23.5 12L17 14.5H23L22 24L16 26L10 24L9.5 19H12.5L13 21.5L16 22.5L19 21.5L19.5 17.5Z" fill="white"></path> </g></svg>
