--- a/src/icons/tech/HTML.astro
+++ b/src/icons/tech/HTML.astro
@@ -1,25 +1,1 @@
-<svg 
-  {...Astro.props}
-  xmlns="http://www.w3.org/2000/svg"
-  viewBox="0 0 452 520">
-  <defs>
-    <mask id="cutout2">
-      <!-- Fondo blanco visible -->
-      <rect width="100%" height="100%" fill="white" />
-      <!-- Letras negras que serán recortadas (transparentes) -->
-      <path
-        fill="black"
-        d="M226 208h-75l-5-58h80V94H84l15 171h127zm0 147l-64-17-4-45h-56l7 89 117 32z"
-      />
-      <path
-        fill="black"
-        d="M226 265h69l-7 73-62 17v59l115-32 16-174H226zm0-171v56h136l5-56z"
-      />
-    </mask>
-  </defs>
-
-  <!-- Aplicar la máscara para que se recorten las letras -->
-  <g mask="url(#cutout2)">
-    <path fill="#fff" d="M41 460L0 0h451l-41 460-185 52" />
-    <path fill="#fff" d="M226 472l149-41 35-394H226" />
-  </g>
+<svg {...Astro.props} viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6 28L4 3H28L26 28L16 31L6 28Z" fill="#E44D26"></path> <path d="M26 5H16V29.5L24 27L26 5Z" fill="#F16529"></path> <path d="M9.5 17.5L8.5 8H24L23.5 11H11.5L12 14.5H23L22 24L16 26L10 24L9.5 19H12.5L13 21.5L16 22.5L19 21.5L19.5 17.5H9.5Z" fill="white"></path> </g></svg>
