fix(url): update incorrect URL to the correct one

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -16,7 +16,7 @@ const PROJECTS = [
     description: t.projects[0].description,
     image: "/Projects/myPortfolio.jpg",
     tags: ["Astro", "JavaScript", "Tailwind"],
-    repositore: "https://github.com/Keikooh/Spotify-clon",
+    repositore: "https://github.com/Keikooh/Keikooh.github.io",
     preview: "",
     isPublished: true,
   },
